added skip.slice=1 config because of phantomjs error

--- a/.sencha/app/sencha.cfg
+++ b/.sencha/app/sencha.cfg
@@ -43,3 +43,12 @@ app.resource.paths=${app.dir}/resources
 app.framework.version=5.1.1.451
 
 app.cmd.version=7.0.0.40
+
+# Addition from djettka, 2024-10-09
+# Because of incompatibilities between sencha cmd, macOS and phantomjs.
+#
+# See also:
+# https://www.sencha.com/forum/showthread.php?329305-PhantomJS-dies-on-MacOS-Sierra/page2
+# This skips slicing which seems only to be needed for IE8/9 compatibility.
+
+skip.slice=1
